# src/routes/index.js
@@ -10,6 +10,8 @@ router.use('/', require('./swagger'));
 router.use('/books', require('./books'));
 router.use('/users', require('./users'));
 router.use('/auth', require('./auth'));
+router.use("/cart", require('./store'));
+router.use('/review',require('./review.js'));
 
 // router.get('/',
 //   // #swagger.ignore = true
