# src/schemas/storeSchema.js
@@ -1,0 +1,28 @@
+const Joi = require('joi');
+
+/**
+ * Schema for validating cart/order objects
+ * @type {Joi.ObjectSchema}
+ */
+const cartSchema = Joi.object({
+  userId: Joi.string()
+    .required()
+    .example('643a6b29f3d5b8d2d8e4d531'), 
+  books: Joi.object()
+    .pattern(
+      Joi.string(), 
+      Joi.number().integer().min(1)  
+    )
+    .required()
+    .example({
+      '643a6b29f3d5b8d2d8e4d532': 2,
+      '643a6b29f3d5b8d2d8e4d533': 1,
+    }),
+  totalPrice: Joi.number()
+    .min(0)
+    .required()
+    .example(49.98),
+});
+
+
+module.exports = { cartSchema };
